--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 		</div>
 		<div class="res">
 			<section class="container">
-
+				<div class="general-info">
+<!--
 			<div class="top">
 						<div class="top-left">
 							<div class="city"></div>
@@ -28,8 +29,11 @@
 							<div class="time"></div>
 						</div>
 			</div>
+-->
+				<!--
 			<div class="results">
-				<div class="each-day selected">
+				
+				div class="each-day selected">
 					<div data-day="0" class="day today-0"></div>
 					<img class="icon icon-1">
 					<div class="temperature"></div>
@@ -61,8 +65,13 @@
 				</div>
 
 			</div>
+-->
+				</div>
+				<div class="daily-results">
+					<!--
+				<div class="card">
 
-			<div class="card">
+			
 
 					<div class="center-left">
 						<div class="weather-result result"></div>
@@ -97,7 +106,8 @@
 					</div>
 				</div>
 			</div>
-
+-->
+				</div>
 			</section>
 		</div>
 		<p class="mentions">Powered by <a href="https://www.metaweather.com/">Metaweather</a></p>
